--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/Metre-Ray/DreamTeam#readme",
   "dependencies": {
     "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^3.0.1",
     "mini-css-extract-plugin": "^0.5.0",
     "style-loader": "^0.23.1",
     "video-react": "^0.13.2"
