--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^3.0.1",
     "mini-css-extract-plugin": "^0.5.0",
-    "style-loader": "^0.23.1",
-    "video-react": "^0.13.2"
+    "style-loader": "^0.23.1"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
@@ -31,7 +30,6 @@
     "babel-loader": "^8.0.5",
     "babel-polyfill": "^6.26.0",
     "css-loader": "^2.1.0",
-    "google-map-react": "^1.1.2",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "leaflet": "^1.4.0",
@@ -39,7 +37,6 @@
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-image-gallery": "^0.8.12",
-    "react-modal-video": "^1.2.1",
     "react-player": "^1.9.3",
     "vertical-timeline-component-for-react": "^1.0.6",
     "webpack": "^4.29.0",
